[package]
name = "eden"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[workspace]
resolver="2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.27.1"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14.0"
pollster = "0.2"
async-executor = "1.4.1"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
egui = "0.19.0"
egui_demo_lib = "0.19"
eframe = "0.19.0"
egui_wgpu_backend = "0.20.0"
egui_winit_platform = "0.16.0"
rand = { version = "0.8.5" }
smaa = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
js-sys = "0.3.60"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

 
[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
 
[profile.release]
debug = 0
