[package]
name = "eden"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[workspace]
resolver="2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4"
wgpu = "0.17.0"
pollster = "0.3.0"
egui_wgpu_backend = "0.25.0"
async-executor = "1.4.1"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
egui = "0.22.0"
egui_demo_lib = "0.22.0"
eframe = "0.22.0"
egui_winit_platform = "0.19.0"
rand = { version = "0.8.5" }
glob = "0.3.1"


# [patch.crates-io]
# egui_wgpu_backend = { path = "./patch/egui_wgpu_backend/" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
js-sys = "0.3.60"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = 0
